# nt

./: Cargo.toml  flake.nix  sqlx-data.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: hmdjvalbmsb9x9wir7xq8y623abjl55w-source  p8j6qy4ncz715fk6icwi1dbhc8wkcr00-source
migrations/: 20230626161008_init.sql
src/: cli.rs  db.rs  export.rs  main.rs  note.rs
