[package]
name = "nt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
etcetera = "0.8.0"
log = "0.4.19"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "sqlite", "macros", "offline" ] }
tokio = { version = "1.29.0", features = ["full"] }
